Tamaños y Cambios varios

--- a/style.css
+++ b/style.css
@@ -39,43 +39,44 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 40px 40px 40px 40px;
+    padding: 2.5rem 2.5rem 2.5rem 2.5rem;
 }
 
 .header-banner img {
     width: 50%;
     height: auto;
-    max-width: 300px;
+    max-width: 18.75rem;
 }
 
 /* Sección de entrada */
 .input-section {
     flex: 60%;
     background-color: var(--color-secondary);
-    border: 1px solid #ece5ce;
-    border-radius: 20px 20px 0 0;
+    border: 0.0625rem solid #ece5ce;
+    border-radius: 1.25rem 1.25rem 0 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
-    width: 100%;
+    padding: 1.25rem;
+    width: auto;
 }
 
 /* Títulos */
 .main-title {
-    font-size: 100px;
+    font-size: 6.25rem;
     font-family: "Comic Neue", serif;
     font-weight: 900;
     font-style: italic;
     color: var(--color-white);
+    margin: 0.625rem 0;
 }
 
 .section-title {
     font-family: "Inter", serif;
-    font-size: 36px;
+    font-size: 2.25rem;
     font-weight: 700;
     color: var(--color-primary);
-    margin: 10px 0;
+    margin: 0.625rem 0;
     text-align: center;
 }
 
@@ -84,18 +85,18 @@ body {
     display: flex;
     justify-content: center;
     width: 100%;
-    max-width: 600px;
-    margin-top: 20px;
-    gap: 10px;  
+    max-width: 37.5rem;
+    margin-top: 1.25rem;
+    gap: 0.625rem;  
     color: var(--color-white);
 }
 
 .input-name {
     width: 100%;
-    padding: 10px;
-    border: 2px solid #000;
-    border-radius: 5px 5px 5px 5px;
-    font-size: 16px;
+    padding: 0.625rem;
+    border: 0.125rem solid #000;
+    border-radius: 0,3125rem 0,3125rem 0,3125rem 0,3125rem;
+    font-size: 1rem;
     background-color: var(--color-primary);
     color: var(--color-secondary);
 }
@@ -103,44 +104,44 @@ body {
 .input-name::placeholder {
     color: var(--color-tertiary); /* Puedes usar la variable que ya has definido en :root */
     font-family: "Comic Neue", sans-serif;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .button-container {
     width: 30rem;    
     display: flex;
     align-items: center;
-    gap: 10% 10%;
+    gap: 0.625rem 5.625rem;
 }
 
 /* Estilos de entrada de texto */
 
 .input-title {
     flex: 1;
-    padding: 10px 15px;
-    font-size: 16px;
-    border: 2px solid #ece5ce;
+    padding: 0.625rem 0,9375rem;
+    font-size: 1rem;
+    border: 0.125rem solid #ece5ce;
     border-right: none;
-    border-radius: 5px 5px 5px 5px;
+    border-radius: 0,3125rem 0,3125rem 0,3125rem 0,3125rem;
     font-family: "Comic Neue", serif;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.3);
 }
 
 /* Estilos de botón */
 button {
-    padding: 15px 30px;
+    padding: 0,9375rem 1.875rem;
     font-family: "Comic Neue", sans-serif;
-    font-size: 16px;
-    border: 2px solid #19271b;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    font-size: 1rem;
+    border: 0.125rem solid #19271b;
+    border-radius: 0,3125rem;
+    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.3);
     cursor: pointer;
 }
 
 .button-add {
     background-color: var(--color-button-hover);
     color: var(--color-primary);
-    border-radius: 5px 5px 5px 5px;
+    border-radius: 0,3125rem 0,3125rem 0,3125rem 0,3125rem;
 }
 
 .button-add:hover {
@@ -152,14 +153,14 @@ ul {
     list-style-type: none;
     color: var(--color-primary);
     font-family: "Comic Neue", sans-serif;
-    font-size: 18px;
-    margin: 20px 0;
+    font-size: 1.5625rem;
+    margin: 1.25rem 0;
 }
 
 .result-list {
-    margin-top: 15px;
+    margin-top: 0.625rem;
     color: var(--color-primary);
-    font-size: 22px;
+    font-size: 1.5625rem;
     font-weight: bold;
     text-align: center;
 }
@@ -169,21 +170,25 @@ ul {
     display: flex;
     align-items: center;
     width: auto;
-    padding: 10px 30px;
+    padding: 0.625rem 1.875rem;
     color: var(--color-secondary);
     background-color: var(--color-primary);
-    font-size: 24px;
+    font-size: 1.5rem;
+    cursor: pointer; 
+    
     
 }
 
 .button-draw img {
-    margin-right: 10px;
-    width: 24px;
-    height: 24px;
+    margin-right: 0.625rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    
 }
 
 .button-draw:hover {
     background-color: var(--color-button-hover);
+    
 }
 
 /* Botón de resetear sorteo */
@@ -191,21 +196,26 @@ ul {
     display: flex;
     align-items: center;
     width: auto;
-    padding: 10px 30px;
+    padding: 0.625rem 1.875rem;
     color: var(--color-secondary);
     background-color: var(--color-primary);
-    font-size: 24px;
+    font-size: 1.5rem;
+    cursor: pointer;
+    
     
 }
 
 .button-reset img {
-    margin-right: 10px;
-    width: 24px;
-    height: 24px;
+    margin-right: 0.625rem;
+    width: 1.5rem;
+    height: 1.5rem;
     
+
 }
 
 .button-reset:hover {
     background-color: var(--color-button-hover);
 }
+
+
 
